karpenter-mpol/set-karpenter-non-cpu-limits/.chainsaw-test/exception-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exception-limits-pod
  namespace: test
spec:
  containers:
  - name: app
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests: {memory: 100Mi}
