karpenter-mpol/set-karpenter-non-cpu-limits/.chainsaw-test/exception-sibling.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exception-limits-sibling
  namespace: test
spec:
  containers:
  - name: app
    image: ghcr.io/kyverno/test-busybox:1.35
    resources:
      requests: {memory: 100Mi}
