karpenter-mpol/set-karpenter-non-cpu-limits/.chainsaw-test/exception-wrong-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karpenter-other-ns
