karpenter-mpol/set-karpenter-non-cpu-limits/.chainsaw-test/exception-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exception-limits-pod
  namespace: test
spec:
  containers:
  - name: app
    resources:
      requests: {memory: 100Mi}
      (limits.memory == null): true
